Fix jmockit usage.